feat: add enums for event priority and types, and implement exception handling for not found entities