@@ -2,11 +2,10 @@ package com.safeway.tech.service.services;
 
 import com.google.maps.model.LatLng;
 import com.safeway.tech.api.dto.endereco.EnderecoRequest;
-import com.safeway.tech.api.dto.endereco.EnderecoResponse;
 import com.safeway.tech.domain.models.Endereco;
 import com.safeway.tech.domain.models.Responsavel;
+import com.safeway.tech.infra.exception.EnderecoNotFoundException;
 import com.safeway.tech.repository.EnderecoRepository;
-import com.safeway.tech.repository.ResponsavelRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -14,129 +13,82 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class EnderecoService {
 
     private final EnderecoRepository enderecoRepository;
-    private final ResponsavelRepository responsavelRepository;
+    private final ResponsavelService responsavelService;
     private final GeocodingService geocodingService;
 
-    @Transactional
-    public EnderecoResponse criar(EnderecoRequest request) {
-        if (request.responsavelId() == null) {
-            throw new RuntimeException("responsavelId é obrigatório");
-        }
-
-        Responsavel responsavel = responsavelRepository.findById(request.responsavelId())
-                .orElseThrow(() -> new RuntimeException("Responsável não encontrado"));
-
-        Endereco endereco = new Endereco();
-        endereco.setLogradouro(request.logradouro());
-        endereco.setNumero(request.numero());
-        endereco.setComplemento(request.complemento());
-        endereco.setBairro(request.bairro());
-        endereco.setCidade(request.cidade());
-        endereco.setUf(request.uf());
-        endereco.setCep(request.cep());
-        endereco.setLatitude(request.latitude());
-        endereco.setLongitude(request.longitude());
-        endereco.setTipo(request.tipo());
-        endereco.setAtivo(true);
-        endereco.setPrincipal(false); // Principal é gerenciado no Responsavel
-        endereco = this.calcularCoordenadas(endereco);
-        endereco = enderecoRepository.save(endereco);
-
-        // Vincula endereço ao responsável
-        responsavel.setEndereco(endereco);
-        responsavelRepository.save(responsavel);
-
-        return EnderecoResponse.fromEntity(endereco);
+    public Endereco buscarPorId(UUID id) {
+        return enderecoRepository.findById(id)
+                .orElseThrow(() -> new EnderecoNotFoundException("Endereço com ID " + id + " não encontrado"));
     }
 
-    public List<EnderecoResponse> listarPorResponsavel(UUID responsavelId) {
-        Responsavel responsavel = responsavelRepository.findById(responsavelId)
-                .orElseThrow(() -> new RuntimeException("Responsável não encontrado"));
-
-        return List.of(EnderecoResponse.fromEntity(responsavel.getEndereco()));
-    }
-
-    @Transactional
-    public List<EnderecoResponse> listarEnderecosDisponiveis(UUID alunoId, UUID usuarioId) {
-        // Busca endereços de todos os responsáveis vinculados ao aluno
-        List<Responsavel> responsaveis = responsavelRepository.findByAlunosIdAlunoAndUsuarioIdUsuario(alunoId, usuarioId);
+    @Transactional(readOnly = true)
+    public List<Endereco> listarEnderecosDisponiveis(UUID alunoId) {
+        List<Responsavel> responsaveis = responsavelService.listarResponsaveisPorAluno(alunoId);
 
         return responsaveis.stream()
-                .map(r -> {
-                    Endereco e = r.getEndereco();
-                    if (e == null) {
-                        return null;
-                    }
-                    // Acessar um campo para garantir inicialização dentro da transação
-                    e.getId();
-                    return EnderecoResponse.fromEntity(e);
-                })
+                .map(Responsavel::getEndereco)
                 .filter(Objects::nonNull)
-                .toList();
-    }
-
-    public EnderecoResponse buscarPorId(UUID id) {
-        Endereco endereco = buscarEntidade(id);
-        return EnderecoResponse.fromEntity(endereco);
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public EnderecoResponse atualizar(UUID id, EnderecoRequest request) {
-        Endereco endereco = buscarEntidade(id);
+    public Endereco criar(EnderecoRequest request) {
+        Endereco endereco = new Endereco();
 
-        endereco.setLogradouro(request.logradouro());
-        endereco.setNumero(request.numero());
-        endereco.setComplemento(request.complemento());
-        endereco.setBairro(request.bairro());
-        endereco.setCidade(request.cidade());
-        endereco.setUf(request.uf());
-        endereco.setCep(request.cep());
-        endereco.setLatitude(request.latitude());
-        endereco.setLongitude(request.longitude());
-        endereco.setTipo(request.tipo());
-        endereco = this.calcularCoordenadas(endereco);
+        aplicarDados(endereco, request);
 
-        endereco = enderecoRepository.save(endereco);
-        return EnderecoResponse.fromEntity(endereco);
+        calcularCoordenadas(endereco);
+        return enderecoRepository.save(endereco);
     }
 
-    @Transactional
+    public Endereco atualizar(UUID id, EnderecoRequest request) {
+        Endereco endereco = buscarPorId(id);
+
+        aplicarDados(endereco, request);
+        calcularCoordenadas(endereco);
+
+        return enderecoRepository.save(endereco);
+    }
+
     public void desativar(UUID id) {
-        Endereco endereco = buscarEntidade(id);
+        Endereco endereco = buscarPorId(id);
         endereco.setAtivo(false);
         enderecoRepository.save(endereco);
     }
 
-    public Endereco buscarEntidade(UUID id) {
-        return enderecoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Endereço não encontrado"));
+    private void aplicarDados(Endereco endereco, EnderecoRequest request) {
+        endereco.setLogradouro(request.logradouro());
+        endereco.setNumero(request.numero());
+        endereco.setComplemento(request.complemento());
+        endereco.setBairro(request.bairro());
+        endereco.setCidade(request.cidade());
+        endereco.setUf(request.uf());
+        endereco.setCep(request.cep());
+        endereco.setLatitude(request.latitude());
+        endereco.setLongitude(request.longitude());
+        endereco.setTipo(request.tipo());
     }
 
-    public Endereco calcularCoordenadas(Endereco endereco) {
-        try {
-            String enderecoCompleto = String.format("%s, %s, %s, %s, %s, %s",
-                    endereco.getLogradouro(),
-                    endereco.getNumero(),
-                    endereco.getBairro(),
-                    endereco.getCidade(),
-                    endereco.getUf(),
-                    endereco.getCep()
-            );
+    private void calcularCoordenadas(Endereco endereco) {
+        String enderecoCompleto = String.format("%s, %s, %s, %s, %s, %s",
+                endereco.getLogradouro(),
+                endereco.getNumero(),
+                endereco.getBairro(),
+                endereco.getCidade(),
+                endereco.getUf(),
+                endereco.getCep()
+        );
 
-            LatLng coordenadas = geocodingService.obterCoordenadas(enderecoCompleto);
-            endereco.setLatitude(coordenadas.lat);
-            endereco.setLongitude(coordenadas.lng);
-
-            return endereco;
-        } catch (Exception e) {
-            throw new RuntimeException("Erro ao calcular coordenadas: " + e.getMessage());
-        }
+        LatLng coordenadas = geocodingService.obterCoordenadas(enderecoCompleto);
+        endereco.setLatitude(coordenadas.lat);
+        endereco.setLongitude(coordenadas.lng);
     }
 
 }
